--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamic Sourcing Ent., Ltd. - Website Review</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slideshow.css">
     <style>
@@ -906,7 +905,8 @@
     </footer>
 
 
-    <script src="script.js"></script>
+    <script type="text/javascript" src="js/emailjs-init.js"></script>
+    
 <script type="text/javascript" src="js/script.js"></script>
 <script>
 // Function to animate a number from 0 to endValue over a given duration
